<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="weatherApp">Weather App</string>
    <string name="weather_icon" translatable="false">Weather Icon</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="enable_notifications">Enable Notifications:</string>
    <string name="unit_system">Unit System</string>
    <string name="your_location_menu_title">Your location</string>
    <string name="celcius_symbol" translatable="false">°C</string>
    <string name="fahrenheit_symbol" translatable="false">°F</string>
    <string name="day_count">Day Count</string>
    <string name="settings">Settings</string>
    <string name="today_notification_title">Today\'s Weather</string>
    <string name="today_notification_channel_name">Today\'s Forecast</string>
    <string name="today_notification_channel_description">This notification will show today\'s forecast details</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celcius">Celcius</string>
    <string-array name="dropdownMenuArray">
        <item>7</item>
        <item>14</item>
    </string-array>

</resources>